[package]
name = "ripstruct"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-epoch = "0.8"
arrayvec = "0.5"
ahash = "0.2"
bitintr = "0.3"
rayon = { version = "1.2", optional = true }


[dev-dependencies]
criterion = "0.3"
crossbeam = "0.7"
num_cpus = "1.11"

[[bench]]
name = "seg_buffer"
harness = false
